# comfyui-anima-t8

./: .gitignore  README.md  __init__.py  pyproject.toml  roadmap.md
api/: __init__.py  artist_client.py  civitai_client.py  danbooru_client.py  gelbooru_client.py
core/: artist_manager.py  danbooru_manager.py  db.py  gelbooru_manager.py  models.py  prompt_manager.py  tag_manager.py
data/: anima_t8.db-shm  default_negative.txt  default_prompts.json  default_tags.json  gelbooru_auth.example.json
nodes/: __init__.py  anima_artist_node.py  anima_combiner_node.py  anima_loader_node.py  anima_prompt_node.py  gelbooru_style_node.py
server/: __init__.py  routes.py
web/: anima_t8.js  api.js
web/components/: artist_gallery.js  gelbooru_gallery.js  prompt_editor.js  prompt_panel.js  tag_chip.js
web/styles/: anima_t8.css
